--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to Production
+name: Deploy to GitHub Pages
 
 on:
   push:
@@ -7,26 +7,25 @@ on:
     branches: [main]
 
 jobs:
-  build-and-test:
+  build-and-deploy:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
 
     steps:
-      - uses: actions/checkout@v2
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
+      - name: 📥 Checkout code
+        uses: actions/checkout@v4
         with:
-          node-version: "16"
+          persist-credentials: false
 
-      - name: Install dependencies
-        run: npm install
+      - name: 🔧 Setup Pages
+        uses: actions/configure-pages@v3
 
-      - name: Run accessibility tests
-        run: npm run test:a11y
+      - name: 📦 Upload artifact
+        uses: actions/upload-pages-artifact@v2
+        with:
+          path: ./
 
-      - name: Build project
-        run: npm run build
-
-      - name: Deploy to production
-        if: github.ref == 'refs/heads/main'
-        run: npm run deploy
+      - name: 🚀 Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v2
