--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,29 +3,27 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches: [main]
-  pull_request:
-    branches: [main]
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 
 jobs:
-  build-and-deploy:
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-
     steps:
-      - name: 📥 Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
-        with:
-          persist-credentials: false
-
-      - name: 🔧 Setup Pages
+      - name: Setup Pages
         uses: actions/configure-pages@v3
-
-      - name: 📦 Upload artifact
+      - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          path: ./
-
-      - name: 🚀 Deploy to GitHub Pages
+          path: "."
+      - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
