--- a/.github/workflows/.github/workflows/pages.yml
+++ b/.github/workflows/.github/workflows/pages.yml
@@ -1,5 +1,5 @@
-# Simple workflow for deploying static content to GitHub Pages
-name: Deploy static content to Pages
+# Simple workflow for deploying to GitHub Pages
+name: Deploy to GitHub Pages
 
 on:
   push:
@@ -10,10 +10,6 @@ permissions:
   contents: read
   pages: write
   id-token: write
-
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
 
 jobs:
   deploy:
